...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MultiplayerActivity">

    <EditText
        android:id="@+id/editText_multiplayer"
        android:layout_width="fill_parent"
        android:hint="@string/hint_username"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginRight="@dimen/marginStart_CW_editText"
        android:layout_marginLeft="@dimen/marginStart_CW_editText"
...
